# robot_ws

./: README.md
src/my_bot_description/: CMakeLists.txt  package.xml
src/my_bot_description/config/: bridge.yaml
src/my_bot_description/launch/: sim.launch.py
src/my_bot_description/scripts/: tf_republisher.py
src/my_bot_description/urdf/: robot.urdf  robot.urdf.xacro
src/my_bot_description/worlds/: my_world.sdf
